set sketchBoard to wrap, fixed background color

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ main {
 
 .sketchBoard {
     display: flex;
-    flex-shrink: 0;
     flex-wrap: wrap;
     height: 400px;
     width: 400px;
@@ -40,6 +39,7 @@ main {
 
 .square {
     display: flex;
+    background-color: white;
     height: 25px;
     width: 25px;
 }
